--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,9 +21,39 @@ env:
   IMAGE_REPO: "thayu10/infrastructure-action-tracker"
 
 jobs:
+  changes:
+    name: Detect app/infra changes
+    runs-on: ubuntu-latest
+    outputs:
+      app_or_infra: ${{ steps.filter.outputs.app_or_infra }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - id: filter
+        name: Check changed paths
+        shell: bash
+        run: |
+          BASE_SHA="${{ github.event.before }}"
+          HEAD_SHA="${{ github.sha }}"
+
+          echo "Comparing $BASE_SHA..$HEAD_SHA"
+          CHANGED="$(git diff --name-only "$BASE_SHA" "$HEAD_SHA" || true)"
+          echo "$CHANGED"
+
+          if echo "$CHANGED" | grep -Eq '^(app/|infra/)'; then
+            echo "app_or_infra=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "app_or_infra=false" >> "$GITHUB_OUTPUT"
+          fi
+
   build_push:
     name: Build & Push Docker Image
     runs-on: ubuntu-latest
+    needs: changes
+    if: needs.changes.outputs.app_or_infra == 'true'
 
     outputs:
       image_tag: ${{ steps.tag.outputs.image_tag }}
@@ -65,7 +95,8 @@ jobs:
   terraform_apply:
     name: Terraform Apply (dev)
     runs-on: ubuntu-latest
-    needs: build_push
+    needs: [changes, build_push]
+    if: needs.changes.outputs.app_or_infra == 'true'
 
     steps:
       - name: Checkout
